--- a/modules/projects/client/views/projects-partials/projects-list.html
+++ b/modules/projects/client/views/projects-partials/projects-list.html
@@ -1,7 +1,7 @@
 <section class="panel panel-default">
 	
 	<div class="panel-heading clearfix">
-		<h2 class="pull-left" ng-show="environment === 'EAO' && title !== 'no'">Environmental Assessments</h2>
+		<h2 class="pull-left" ng-show="environment === 'EAO' && title !== 'no'">List of Environmental Assessments</h2>
 		<h2 class="pull-left" ng-show="environment === 'MEM' && title !== 'no'">Mining Projects</h2>
 		<div class="pull-right">
 			<show-filter x-toggle-filter="toggleFilter"></show-filter>
