--- a/modules/projects/client/views/project-partials/project.public.comments.html
+++ b/modules/projects/client/views/project-partials/project.public.comments.html
@@ -6,9 +6,18 @@
     
     <div class="view-body-container">
         
-        <div class="alert alert-success clearfix">
-            <h2 class="pull-left">Public Comment Period is Now Open!</h2>
-            <button class="btn btn-success pull-right" data-toggle="modal" data-target="#submitCommentModal">Submit a Comment - Click Here</button>
+        <div class="public-comment-alert">
+            <h2>Public Comment Period is Now Open!</h2>
+            <div class="details">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                <ul class="public-comment-period-document-links">
+                    <li><a class="document-name" href="#">Application Information Requirements</a><a href="#">[ DOWNLOAD ]</a><a href="#">[ VIEW ]</a></li>
+                    <li><a class="document-name" href="#">Associated Documentation</a><a href="#">[ DOWNLOAD ]</a><a href="#">[ VIEW ]</a></li>
+                </ul>
+                <button class="btn btn-success" data-toggle="modal" data-target="#submitCommentModal">
+                    Click Here to Submit a Comment
+                </button>
+            </div>
         </div>
         
         <!-- PROTOTYPE PUBLIC ROW TEMPLATES  -->
@@ -58,50 +67,68 @@
         </table><!-- / PROTOTYPE PUBLIC ROW TEMPLATES  -->
         
         <!-- PROTOTYPE EAO STAFF ROW TEMPLATES  -->
-        <table ng-table="tableParams" show-filter="true" class="table table-striped table-hover">			
-            <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
-                <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Posted by'" filter="{'name':'text'}" sortable="'name'">
-                    <h2 class="comment-title">Anonymous</h2>
-                    <div ng-init="toggleProject.desc = (false)">
-                        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <div>
+            <ul class="tab-container nav nav-tabs" role="tablist">
+                <li role="presentation" class="active"><a href="#pendingReview" aria-controls="pendingReview" role="tab" data-toggle="tab">Pending Review (X)</a></li>
+                <li role="presentation"><a href="#profile" aria-controls="profile" role="tab" data-toggle="tab">Deferred (X)</a></li>
+                <li role="presentation"><a href="#messages" aria-controls="messages" role="tab" data-toggle="tab">Published (X)</a></li>
+                <li role="presentation"><a href="#settings" aria-controls="settings" role="tab" data-toggle="tab">Rejected (X)</a></li>
+            </ul>
+            <div class="tab-content">
+                <div class="tab-pane active" role="tabpanel" id="pendingReview">
+                    <div class="panel panel-default">
+                        <table ng-table="tableParams" show-filter="true" class="eao-comment-table table table-striped table-hover">			
+                            <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
+                                <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Posted by'" filter="{'name':'text'}" sortable="'name'">
+                                    <h2 class="comment-title">Anonymous</h2>
+                                    <div ng-init="toggleProject.desc = (false)">
+                                        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    </div>
+                                </td>
+                                <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
+                                <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
+                                <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
+                                <td class="attachment-col" header-class="'attachment-col'"><span class="glyphicon glyphicon-paperclip"></span></td>
+                                <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
+                                <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'" ><span class="label label-info">EXPIRES IN 7 DAYS</span></td>
+                            </tr>
+                            <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
+                                <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Headline'" filter="{'name':'text'}" sortable="'name'">
+                                    <h2 class="comment-title">Anonymous</h2>
+                                    <div ng-init="toggleProject.desc = (false)">
+                                        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    </div>
+                                </td>	
+                                <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
+                                <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
+                                <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
+                                <td class="attachment-col" header-class="'attachment-col'"><span class="glyphicon glyphicon-paperclip"></span></td>
+                                <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
+                                <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'" ><span class="label label-warning">EXPIRES IN 7 DAYS</span></td>
+                            </tr>
+                            <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
+                                <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Headline'" filter="{'name':'text'}" sortable="'name'">
+                                    <h2 class="comment-title">Anonymous</h2>
+                                    <div ng-init="toggleProject.desc = (false)">
+                                        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    </div>
+                                </td>	
+                                <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
+                                <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
+                                <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
+                                <td class="attachment-col" header-class="'attachment-col'"></td>
+                                <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
+                                <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'"><span class="label label-danger">EXPIRES IN 1 DAY</span></td>
+                            </tr> 
+                            <tr ng-if="!$data || $data.length === 0">
+                                <td colspan="6">No records found.</td>
+                            </tr>
+                        </table>
                     </div>
-                </td>
-                <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
-                <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
-                <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
-                <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
-                <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'" ><span class="label label-info">EXPIRES IN 7 DAYS</span></td>
-            </tr>
-            <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
-                <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Headline'" filter="{'name':'text'}" sortable="'name'">
-                    <h2 class="comment-title">Anonymous</h2>
-                    <div ng-init="toggleProject.desc = (false)">
-                        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </td>	
-                <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
-                <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
-                <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
-                <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
-                <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'" ><span class="label label-warning">EXPIRES IN 7 DAYS</span></td>
-            </tr>
-            <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
-                <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Headline'" filter="{'name':'text'}" sortable="'name'">
-                    <h2 class="comment-title">Anonymous</h2>
-                    <div ng-init="toggleProject.desc = (false)">
-                        <p class="comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                    </div>
-                </td>	
-                <td class="location-col no-mobile" header-class="'location-col no-mobile'" data-title="'Location'" filter="{'name':'text'}" sortable="'commentLocation'">Location</td>
-                <td class="pillar-col" header-class="'pillar-col no-mobile'" data-title="'Pillar'" filter="{'pillar':'select'}" sortable="'commentPillar'">Health, Environment, Heritage</td>
-                <td class="vc-col" header-class="'pillar-col'" data-title="'Valued Component'" filter="{'commentVC':'select'}" sortable="'commentVC'">Air Quality, Water Quality, Regulatory Process, Rights & Titles</td>			
-                <td class="date-col" header-class="'date-col'" data-title="'Date Posted'" filter="{'date':'text'}" sortable="'dateAdded'" >MM/DD/YYYY</td>
-                <td class="status-col" header-class="'status-col no-mobile'" data-title="'Status'" filter="{'date':'select'}" sortable="'status'"><span class="label label-danger">EXPIRES IN 1 DAY</span></td>
-            </tr> 
-            <tr ng-if="!$data || $data.length === 0">
-                <td colspan="6">No records found.</td>
-            </tr>
-        </table><!-- / PROTOTYPE EAO STAFF ROW TEMPLATES  -->
+                </div>
+            </div>
+        </div>
+        <!-- / PROTOTYPE EAO STAFF ROW TEMPLATES  -->
         
     </div>
 </div>
