--- a/modules/publicComments/client/views/comments-public.html
+++ b/modules/publicComments/client/views/comments-public.html
@@ -8,20 +8,18 @@
         
         <div class="public-comment-alert">
             <h2>Public Comment Period is Now Open!</h2>
-            <div class="details">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-                <ul class="public-comment-period-document-links">
-                    <li><a class="document-name" href="#">Application Information Requirements</a><a href="#">[ VIEW FILES ]</a></li>
-                    <li><a class="document-name" href="#">Associated Documentation</a><a href="#">[ VIEW FILES ]</a></li>
-                </ul>
-                <button class="btn btn-success" data-toggle="modal" data-target="#submitCommentModal">
-                    Click Here to Submit a Comment
-                </button>
-            </div>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <ul class="public-comment-period-document-links">
+                <li><a class="document-name" href="#">Application Information Requirements</a><a href="#">[ VIEW FILES ]</a></li>
+                <li><a class="document-name" href="#">Associated Documentation</a><a href="#">[ VIEW FILES ]</a></li>
+            </ul>
+            <button class="btn btn-success" data-toggle="modal" data-target="#submitCommentModal">
+                Click Here to Submit a Comment
+            </button>
         </div>
         
         <!-- PROTOTYPE PUBLIC ROW TEMPLATES  -->
-        <div class="panel panel-default">
+        <div class="public-comment-panel panel panel-default">
             <table ng-table="tableParams" show-filter="true" class="table table-striped table-hover">			
                 <tr class="comment-row" data-toggle="modal" data-target="#commentDetailModal">
                     <td class="comment-col" header-class="'comment-col no-mobile'" data-title="'Posted by'" filter="{'name':'text'}" sortable="'name'">
