Fixing user organization UID issue: ESM-246

--- a/modules/organizations/client/views/organization-user-view.html
+++ b/modules/organizations/client/views/organization-user-view.html
@@ -115,7 +115,7 @@
 			<div class="col-sm-4">
 				<div class="form-group">
 					<label for="orgName" class="control-label">Organization</label>
-					<p class="form-control-static">{{ user.orgName }}</p>
+					<p class="form-control-static">{{ user.org.name }}</p>
 				</div>
 			</div>
 			<div class="col-sm-4">
