--- a/modules/users/client/views/admin/user-view.html
+++ b/modules/users/client/views/admin/user-view.html
@@ -118,7 +118,7 @@
 			<div class="col-sm-6 col-md-3">
 				<div class="form-group">
 					<label for="orgName" class="control-label">Organization</label>
-					<p class="form-control-static">{{ user.orgName }}</p>
+					<p class="form-control-static">{{ user.org.name }}</p>
 				</div>
 			</div>    
 			<div class="col-sm-6 col-md-3">
